# multiqc_cgs

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yaml
multiqc_cgs/: __init__.py
