[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiqc_cgs"
version = "1.0.0"
description = "MultiQC plugin to add extra columns to the General Statistics table"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Patrik Smeds", email = "patrik.smeds@scilifelab.uu.se" }]
keywords = ["bioinformatics", "multiqc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.8"
dependencies = ["multiqc>=1.21"]

[project.entry-points."multiqc.hooks.v1"]
after_modules = "multiqc_cgs.hooks:after_modules"

[tool.hatch.build.targets.wheel]
packages = ["multiqc_cgs"]
